# GameOfLife

./: GameOfLife.cabal
src/: GameOfLife.hs  GameOfLifeSDL.hs  glider.txt  gliderGun.txt  points.txt
